fix z-index

--- a/ui/src/assets/widgets/modal.scss
+++ b/ui/src/assets/widgets/modal.scss
@@ -40,7 +40,7 @@
 
 .pf-modal-backdrop {
   position: absolute;
-  z-index: 1000;
+  z-index: 99;
   background-color: rgba(0, 0, 0, 0.6);
   top: 0;
   left: 0;
@@ -58,7 +58,7 @@
 
 .pf-modal-dialog {
   position: absolute;
-  z-index: 1001;
+  z-index: 100;
   background-color: var(--pf-color-background);
   margin: auto;
   min-width: 25vw;
