--- a/ui/src/plugins/dev.perfetto.ExplorePage/query_builder/graph/graph.scss
+++ b/ui/src/plugins/dev.perfetto.ExplorePage/query_builder/graph/graph.scss
@@ -33,6 +33,5 @@
   top: 1rem;
   left: 1rem;
   gap: 0.5rem;
-  z-index: 100;
   pointer-events: auto;
 }
