--- a/ui/src/plugins/dev.perfetto.ExplorePage/query_builder/node_explorer.scss
+++ b/ui/src/plugins/dev.perfetto.ExplorePage/query_builder/node_explorer.scss
@@ -64,9 +64,12 @@
     padding: 0.375rem;
     font-size: var(--pf-exp-font-size-sm);
     flex-grow: 1;
+    flex-shrink: 1;
+    min-height: 0;
     display: flex;
     flex-direction: column;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
 
   &.collapsed {
@@ -123,10 +126,23 @@
 }
 
 .pf-exp-aggregation-viewer {
-  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   padding: 0.5rem;
   border-radius: 4px;
+  gap: 0.5rem;
+
   &:hover {
     background-color: var(--pf-color-hover);
+  }
+
+  span {
+    cursor: pointer;
+    flex-grow: 1;
+  }
+
+  .pf-button {
+    flex-shrink: 0;
   }
 }
